test/errors/array_types_error/zs/implicit_array_string_error.zs
package implicit_array_string_error;

struct ImplicitArrayStringError
{
    implicit string array[];
};
